deployment/deployment-type/4-canary/1-currency-exchange-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-exchange-v2
  namespace: default
  labels:
    version: v2
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: currency-exchange
      version: v2
  template:
    metadata:
      labels:
        app: currency-exchange
        version: v2
    spec:
      containers:
        - image: amsidhmicroservice/kube-currency-exchange:1.1.2
          imagePullPolicy: IfNotPresent #Always
          name: currency-exchange
          ports:
            - name: tcp-exchange
              containerPort: 8181
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1024Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
