deployment/deployment-type/4-canary/1-currencyexchange-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-exchange-v1
  namespace: default
  labels:
    version: v1
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: currency-exchange
      version: v1
  template:
    metadata:
      labels:
        app: currency-exchange
        version: v1
    spec:
      containers:
        - image: amsidhmicroservice/kube-currency-exchange:1.1.1
          imagePullPolicy: Always
          name: currency-exchange
          ports:
            - name: tcp-exchange
              containerPort: 8181
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1024Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
