deployment/deployment-type/4-canary/2-currency-exchange-service.yaml
#CurrencyExchange Service Configuration
apiVersion: v1
kind: Service
metadata:
  name: currency-exchange
  labels:
    app: currency-exchange
spec:
  ports:
    - name: tcp-exchange
      port: 8181
  selector:
    app: currency-exchange
  sessionAffinity: ClientIP
  type: NodePort
