deployment/deployment-type/4-canary/3-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: ingressgateway-port
        number: 80
        protocol: HTTP
      hosts:
        - "*"
