deployment/deployment-type/4-canary/4-virtual-service-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: currency-service-virutal-service
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /currency-conversion
      route:
        - destination:
            host: currency-conversion
            port:
              number: 8282
    - match:
        - uri:
            prefix: /currency-exchange
      route:
        - destination:
            host: currency-exchange
            port:
              number: 8181
            subset: v1
          weight: 70
        - destination:
            host: currency-exchange
            port:
              number: 8181
            subset: v2
          weight: 30
