deployment/deployment-type/4-canary/5-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: currency-service-destination-rule
spec:
  host: currency-exchange
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
